<resources>
    <string name="app_name">Story Apps</string>
    <string name="logo">Logo</string>
    <string name="icon_back_button">Icon Back Button</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="content_desc">Image of a person working</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_desc">Hello there, sign in to continue</string>
    <string name="check_valid_email">Please, input a valid email address </string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="password_minimum">Password must consist of minimum 8 characters</string>
    <string name="register_ask">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="desc_register">Hello, Create your account to get started</string>
    <string name="name_minimum">Name must be at least 2 letters long!</string>
    <string name="loginask">Already have a account?</string>
    <string name="username">Username</string>
    <string name="desc_default">This is a description</string>
    <string name="noStories">No Stories found.</string>
    <string name="contentAdd">Add post</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="rotate_picture">Rotate Picture</string>
    <string name="post_title">Create a new post</string>
    <string name="photo_story_upload">Photo story upload</string>
    <string name="enter_description">Enter a description</string>
    <string name="post">Post</string>
    <string name="expand_image">Expand Image</string>
    <string name="line">line</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="story_image">Story Image</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="imageregister">ImageRegister</string>
    <string name="createdAt">17/01/2001</string>
    <string name="register_success">Your Account was Successfully created</string>
    <string name="processing_capture">Please Wait until is done.</string>
    <string name="capture_failed">Failed to capture image</string>
    <string name="camera_fail_open">Failed to Open Camera</string>
    <string name="wait_processing">Wait until processing is done</string>
    <string name="desc_required">Description cannot be left blank</string>
    <string name="post_success">Your post was successfully created</string>
</resources>