<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/icon_back_button"
        android:src="@drawable/ic_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsernames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:fontFamily="@font/nunitobold"
        android:textColor="@color/blue"
        android:gravity="center_vertical"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        />

    <TextView
        android:id="@+id/tvPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitobold"
        android:gravity="center_vertical"
        android:text="@string/post"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tvUsernames"
        app:layout_constraintLeft_toRightOf="@id/tvUsernames"
        app:layout_constraintTop_toTopOf="@+id/tvUsernames" />

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:src="@drawable/container_line"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/line" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLine"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunitosembold"
        style="@style/TextUsername"
        app:layout_constraintLeft_toRightOf="@id/ivUser"
        app:layout_constraintTop_toTopOf="@id/ivUser"
        app:layout_constraintBottom_toBottomOf="@id/ivUser"/>

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/createdAt"
        android:textSize="15sp"
        android:fontFamily="@font/nunitosembold"
        style="@style/TextUsername"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintLeft_toLeftOf="@id/tvUsername" />


    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        style="@style/TextUsername"
        android:fontFamily="@font/nunitosembold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUser"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:id="@+id/ivStory"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:src="@tools:sample/avatars"
        android:layout_margin="15dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        android:contentDescription="@string/story_image" />

</androidx.constraintlayout.widget.ConstraintLayout>