<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvRegWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/black_50"
        android:textSize="30sp"
        android:fontFamily="@font/nunitobold"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_register"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/nunitomed"
        app:layout_constraintTop_toBottomOf="@id/tvRegWelcome"/>

    <com.itsmealdo.storyapps.customview.NameEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:inputType="text"
        android:fontFamily="@font/nunitosembold"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeDesc"
        android:layout_marginTop="35dp"/>

    <com.itsmealdo.storyapps.customview.EmailEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/nunitosembold"
        app:layout_constraintTop_toBottomOf="@id/etName"/>

    <com.itsmealdo.storyapps.customview.PasswordEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:inputType="textPassword"
        android:fontFamily="@font/nunitosembold"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/nunitobold"
        android:background="@drawable/btnlogin"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/ivImageRegister"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/imgwoman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/imageregister" />

    <TextView
        android:id="@+id/tvRegisterDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginask"
        android:fontFamily="@font/nunitosembold"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/nunitoexbold"
        android:textColor="@color/blue_50"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegisterDesc"
        app:layout_constraintStart_toEndOf="@+id/tvRegisterDesc"
        app:layout_constraintTop_toTopOf="@+id/tvRegisterDesc" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>